# bootcamp_dbt_core

./: README.md  pyproject.toml
projetoaovivo/: dbt_project.yml
