[tool.poetry]
name = "bootcamp-dbt-core"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <vgabriel@mslcorporate.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.0"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
